play-pit/Collaboration/Mattermost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost
  labels:
    name: mattermost
