play-pit/Collaboration/Mattermost/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mattermost-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - mattermost.kx-as-code.local
  rules:
  - host: mattermost.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: mattermost-mattermost
           servicePort: 80
